--- a/homePage/index.html
+++ b/homePage/index.html
@@ -22,8 +22,10 @@
                   <li class= 'nav' id = 'aboutUs'>About</li>
                   <li class= 'nav' id ='vote'>Vote</li>
                   <li class= 'nav' id = 'countDown'>Count Down</li>
-                  <li class= 'nav' id ='contactUs'>Contact Us</ul>
+                  <li class= 'nav' id ='contactUs'>Contact Us</li>
                   <li class= 'nav' id ='game'>Hang Man</li>
+                </ul>
+
             </aside>
 
             <article>
