--- a/aboutPage/about.html
+++ b/aboutPage/about.html
@@ -20,8 +20,9 @@
                   <li class= 'nav' id = 'aboutUs'>About</li>
                   <li class= 'nav' id ='vote'>Vote</li>
                   <li class= 'nav' id = 'countDown'>Count Down</li>
-                  <li class= 'nav' id ='contactUs'>Contact Us</ul>
+                  <li class= 'nav' id ='contactUs'>Contact Us</li>
                   <li class= 'nav' id ='game'>Hang Man</li>
+                </ul>
 
             </aside>
             <article>
