add picture and styling for vote page add temp function for vote tracking

--- a/votePage/vote.html
+++ b/votePage/vote.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>)'( Whalephants )'(</title>
   <link rel="stylesheet" type="text/css" href="../structure/homePage.css">
   <link href='https://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Gochi+Hand' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
       <body>
       <header>
@@ -23,7 +25,7 @@
                 </ul>
 
             </aside>
-            <article>
+            <article id='images' >
 
 
 
@@ -65,5 +67,6 @@
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.js'></script>
 <script src="../structure/homepage.js"></script>
+<script src="../structure/drinks.js" ></script>
 </body>
 </html>
