--- a/countDownPage/countDown.html
+++ b/countDownPage/countDown.html
@@ -5,7 +5,9 @@
   <link rel="stylesheet" type="text/css" href="../structure/homePage.css">
   <link href='https://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Gochi+Hand' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="./countdown.css">
+  <link rel="stylesheet" type="text/css" href="./countDown.css">
+
+
 </head>
       <body>
       <header>
@@ -25,46 +27,54 @@
 
             </aside>
             <article>
+        <div id='top'>
+            <div id ='leftCha'>
+                <p id='welcome'>Welcome Home...</p>
+                <img id='kids' src="./countDownImage/kids.jpg">
+                <!-- <img id='pin' src="./countDownImage/pin.jpg"> -->
+            </div>
 
-            <p id='welcome'>Welcome Home...</p>
-            <p id='drink'>Come Get A Drink</p>
-            <img id='kids' src="./countDownImage/kids.jpg">
-            <img id='bmimg' src='./countDownImage/BurningMan.png'>
-            <img id='pin' src="./countDownImage/pin.jpg">
-                  <div id="clock">
-                      <div id='days'>
-                          <div class = 'clockBoarder'>
-                              <span class="days"></span>
-                          </div>
-                          <p>Days</p>
-                      </div>
-
-                      <div id ='time'>
-                          <div class = 'clockBoarder'>
-                              <span class="hours"></span>
-                              <p class='words'>Hours</p>
-                          </div>
-
-                          <div class = 'clockBoarder'>
-                              <div class='timeIn'>
-                                  <p2 class='colin'>:</p2>
-                                  <span class="minutes"></span>
-                              </div>
-                              <p class='words'>Minutes</p>
-                          </div>
-
-                          <div class = 'clockBoarder'>
-                              <div class='timeIn'>
-                                  <p2 class='colin'>:</p2>
-                                  <span class="seconds"></span>
-                              </div>
-                              <p class='words'>Seconds</p>
-                          </div>
-                      </div>
+            <div  id ='midCha'>
+                <img id='bmimg' src='./countDownImage/BurningMan.png'>
+            </div>
+            <div id='rightCha'>
+                      <p id='drink'>Come Get A Drink</p>
                   </div>
+        </div>
 
+                  <div id='bottom'>
+                      <div id="clock">
+                          <div id='days'>
+                              <div class = 'clockBoarder'>
+                                  <span class="days"></span>
+                              </div>
+                              <p>Days</p>
+                          </div>
 
+                          <div id ='time'>
+                              <div class = 'clockBoarder'>
+                                  <span class="hours"></span>
+                                  <p class='words'>Hours</p>
+                              </div>
 
+                              <div class = 'clockBoarder'>
+                                  <div class='timeIn'>
+                                      <p2 class='colin'>:</p2>
+                                      <span class="minutes"></span>
+                                  </div>
+                                  <p class='words'>Minutes</p>
+                              </div>
+
+                              <div class = 'clockBoarder'>
+                                  <div class='timeIn'>
+                                      <p2 class='colin'>:</p2>
+                                      <span class="seconds"></span>
+                                  </div>
+                                  <p class='words'>Seconds</p>
+                              </div>
+                          </div>
+                      </div>
+                      </div>
             </article>
       </section>
       <footer>
