create hang man game, fix glitches

--- a/gamePage/game.html
+++ b/gamePage/game.html
@@ -6,7 +6,7 @@
   <link href='https://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Gochi+Hand' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="about.css">
+  <link rel="stylesheet" type="text/css" href="game.css">
 </head>
       <body>
       <header>
@@ -26,10 +26,17 @@
 
             </aside>
             <article>
-
-
-
-
+                <img id= 'hangImg'>
+                <p id='hint'></p>
+                <div id='textBox'></div>
+                <div id='inputs'>
+                <input class ='letter' id='guess1'>
+                <input class ='letter' id='guess2'>
+                <input class ='letter' id='guess3'>
+                <p id='gal'>Guess a letter!!</p>
+                </div>
+                <p2><u>Wrong Letters</u></p2>
+                <p id='usedLetters'></p>
 
             </article>
       </section>
@@ -65,5 +72,6 @@
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.js'></script>
 <script src="../structure/homepage.js"></script>
+<script src="./game.js"></script>
 </body>
 </html>
