search box properly working

--- a/votePage/vote.html
+++ b/votePage/vote.html
@@ -25,7 +25,7 @@
                 </ul>
 
             </aside>
-            <article id='images' >
+            <article>
             <input id='searchBox' type="search" placeholder="Find A Drink">
             <section>
                <br></br>
@@ -35,6 +35,9 @@
                 Below you can vote on two drinks and if one of your selections is in the top 7 it will be one of our featured drinks during the week
                 </p>
             </section>
+            <div id ='images'>
+
+            </div>
 
 
 
