--- a/votePage/vote.html
+++ b/votePage/vote.html
@@ -27,14 +27,14 @@
             </aside>
             <article>
             <input id='searchBox' type="search" placeholder="Find A Drink">
-            <section>
+            <div id = 'voteCopy'>
                <br></br>
                <p class="voteP">
                 Whalepants will be serving up refreshing drinks during the 7 days of Burning Man. Have a favorite cocktail or have one that you have been dying to try?
                 <br></br>
                 Below you can vote on two drinks and if one of your selections is in the top 7 it will be one of our featured drinks during the week
                 </p>
-            </section>
+            </div>
             <div id ='images'>
 
             </div>
