add heart rating images and basic events

--- a/contactPage/contactUs.html
+++ b/contactPage/contactUs.html
@@ -37,6 +37,11 @@
                     <button id="submitForm" class="submitButton">Submit</button>
                     <p id="validateP" class="validateP"></p>
                     </div>
+                    <div class="ratings">
+                      <h2 class="rateTitle">How was camp?</h2>
+                      <div id="rateDiv" class="rateHearts">
+                      </div>
+                    </div>
                 </article>
             </div>
       </section>
