--- a/contactPage/contactUs.html
+++ b/contactPage/contactUs.html
@@ -40,6 +40,11 @@
                     <div class="ratings">
                       <h2 class="rateTitle">How was camp?</h2>
                       <div id="rateDiv" class="rateHearts">
+                        <img id="r1" class="hearts" src="images/campStars_blank.jpg">
+                        <img id="r2" class="hearts" src="images/campStars_blank.jpg">
+                        <img id="r3" class="hearts" src="images/campStars_blank.jpg">
+                        <img id="r4" class="hearts" src="images/campStars_blank.jpg">
+                        <img id="r5" class="hearts" src="images/campStars_blank.jpg">
                       </div>
                     </div>
                 </article>
