--- a/aboutPage/about.html
+++ b/aboutPage/about.html
@@ -6,6 +6,7 @@
   <link href='https://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Gochi+Hand' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="about.css">
 </head>
       <body>
@@ -27,9 +28,18 @@
             </aside>
             <article>
                 <h3 id ='title'><u>About Whalephants</u></h3>
-                <p3>Whalephants is a camp that has come together to be at home for over 5 years.
-                    This group comes from all over from the east coast and west.</p3>
-
+                <p3>Whalephants is a camp that comes together from all around the united states. We strive to make sure that our camp mates and fellow burners are having fun and always have a full cup. Posted up at the corner of 9:15 and J we relax with our morning drinks talking about the night before and inviting passerby's in for a drink.
+                <br/>
+                <img src="../homePage/homePageImages/campTent.jpg">
+                <br/>
+                Every day a different camp mate is in charge of concocting a drink that will be later served on the corner. You as a reader can partake in this daily event in different ways. Pre-burn you can head over the the <u>Voting page</u> to help decide what drinks are going to be made for this years burn. The second way that you can help make this great social event happen is to come by each day to the corner of 9:15 and J to help consume the great drinks that each mate has created.
+                <br/>
+                <img src="./aboutImages/drink.jpg">
+                <br/>
+                As a group we have a few different game that we pay. The first one is a picture contest that you can be involved in. some of the camp mates have build different ray guns out of old tools. The goal for the picture is to have the craziest, coolest picture possible. The second game that we play as a camp is the <u>Moop game</u>. For you new burners out there Moop is Matter Out of Place. As we all should know the goal is to leave on trace. So as a group we play this great game, the goal is to pick up any moop that you can fine. Whether it is near the camp or around the playa its all fair game. If you pick up something you are allowed to puck it in the nearest persons backpack or bike basket. Each morning we all go over what was found and who was the findy. There are a few different categories that you can win in the game of Moop, some being: Biggest piece of moop, shiniest piece of moop, smallest piece of moop, craziest piece of moop, and the list goes on.
+                <br/>
+                <img src="./aboutImages/moop.jpg" id='moopImg'>
+                </p3>
 
 
 
