--- a/homePage/index.html
+++ b/homePage/index.html
@@ -10,23 +10,24 @@
 </head>
 
 <body>
-      <header>
-          <img src="../structure/homeImages/logo.jpg" id = 'logo'>
+      <header class ='width'>
           <h1>Whalephants</h1>
       </header>
 
-      <section>
-            <aside>
-                <ul>
-                  <li class= 'nav' id ='home'>Home</li>
-                  <li class= 'nav' id = 'aboutUs'>About</li>
-                  <li class= 'nav' id ='vote'>Vote</li>
-                  <li class= 'nav' id = 'countDown'>Count Down</li>
-                  <li class= 'nav' id ='contactUs'>Contact Us</li>
-                  <li class= 'nav' id ='game'>Hang Man</li>
-                </ul>
-
-            </aside>
+      <section class='width'>
+            <div id='bar'>
+              <img src="../structure/homeImages/logo.jpg" id = 'logo' class='fade'>
+              <aside>
+                  <ul>
+                    <li class= 'nav' id ='home'>Home</li>
+                    <li class= 'nav' id = 'aboutUs'>About</li>
+                    <li class= 'nav' id ='vote'>Vote</li>
+                    <li class= 'nav' id = 'countDown'>Count Down</li>
+                    <li class= 'nav' id ='contactUs'>Contact Us</li>
+                    <li class= 'nav' id ='game'>Hang Man</li>
+                  </ul>
+              </aside>
+            </div>
 
             <article>
                 <div id='desc'>
@@ -67,7 +68,7 @@
             </article>
       </section>
 
-      <footer>
+      <footer class ='width'>
           <div id='footerBar'>
               <div class ='footerNav'>
                 <ul class = 'bottomList'>
