fit layout and navbar, close #45

--- a/aboutPage/about.html
+++ b/aboutPage/about.html
@@ -10,12 +10,14 @@
   <link rel="stylesheet" type="text/css" href="about.css">
 </head>
       <body>
-      <header>
-      <img src="../structure/homeImages/logo.jpg" id = 'logo'>
+      <header class='width'>
       <h1>Whalephants</h1>
       </header>
-      <section>
-            <aside>
+
+      <section class='width'>
+          <div id='bar'>
+              <img src="../structure/homeImages/logo.jpg" id = 'logo' class='fade'>
+              <aside>
                 <ul>
                   <li class= 'nav' id ='home'>Home</li>
                   <li class= 'nav' id = 'aboutUs'>About</li>
@@ -24,8 +26,8 @@
                   <li class= 'nav' id ='contactUs'>Contact Us</li>
                   <li class= 'nav' id ='game'>Hang Man</li>
                 </ul>
-
-            </aside>
+              </aside>
+          </div>
             <article>
                 <h3 id ='title'><u>About Whalephants</u></h3>
                 <p3>Whalephants is a camp that comes together from all around the united states. We strive to make sure that our camp mates and fellow burners are having fun and always have a full cup. Posted up at the corner of 9:15 and J we relax with our morning drinks talking about the night before and inviting passerby's in for a drink.
@@ -40,13 +42,9 @@
                 <br/>
                 <img src="./aboutImages/moop.jpg" id='moopImg'>
                 </p3>
-
-
-
-
             </article>
       </section>
-      <footer>
+      <footer class='width'>
           <div id='footerBar'>
               <div class ='footerNav'>
                 <ul class = 'bottomList'>
