--- a/gamePage/game.html
+++ b/gamePage/game.html
@@ -9,12 +9,14 @@
   <link rel="stylesheet" type="text/css" href="game.css">
 </head>
       <body>
-      <header>
-      <img src="../structure/homeImages/logo.jpg" id = 'logo'>
+      <header class='width'>
       <h1>Whalephants</h1>
       </header>
-      <section>
-            <aside>
+
+      <section class='width'>
+          <div id='bar'>
+              <img src="../structure/homeImages/logo.jpg" id = 'logo' class='fade'>
+              <aside>
                 <ul>
                   <li class= 'nav' id ='home'>Home</li>
                   <li class= 'nav' id = 'aboutUs'>About</li>
@@ -23,8 +25,8 @@
                   <li class= 'nav' id ='contactUs'>Contact Us</li>
                   <li class= 'nav' id ='game'>Hang Man</li>
                 </ul>
-
-            </aside>
+              </aside>
+          </div>
             <article>
                 <img id= 'hangImg'>
                 <p id='hint'></p>
@@ -40,7 +42,7 @@
 
             </article>
       </section>
-      <footer>
+      <footer class='width'>
           <div id='footerBar'>
               <div class ='footerNav'>
                 <ul class = 'bottomList'>
