--- a/countDownPage/countDown.html
+++ b/countDownPage/countDown.html
@@ -6,16 +6,16 @@
   <link href='https://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Gochi+Hand' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="./countDown.css">
-
-
 </head>
       <body>
-      <header>
-      <img src="../structure/homeImages/logo.jpg" id = 'logo'>
+      <header class ='width'>
       <h1>Whalephants</h1>
       </header>
-      <section>
-            <aside>
+
+      <section class='width'>
+            <div id='bar'>
+              <img src="../structure/homeImages/logo.jpg" id = 'logo' class='fade'>
+              <aside>
                 <ul>
                   <li class= 'nav' id ='home'>Home</li>
                   <li class= 'nav' id = 'aboutUs'>About</li>
@@ -24,8 +24,8 @@
                   <li class= 'nav' id ='contactUs'>Contact Us</li>
                   <li class= 'nav' id ='game'>Hang Man</li>
                 </ul>
-
-            </aside>
+              </aside>
+            </div>
             <article>
         <div id='top'>
             <div id ='leftCha'>
@@ -77,7 +77,7 @@
                       </div>
             </article>
       </section>
-      <footer>
+      <footer class='width'>
           <div id='footerBar'>
               <div class ='footerNav'>
                 <ul class = 'bottomList'>
