add thanks text

--- a/thanksPage/thanks.html
+++ b/thanksPage/thanks.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="../structure/homePage.css">
   <link href='https://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Gochi+Hand' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="thanks.css">
 </head>
       <body>
       <header class='width'>
@@ -22,13 +23,16 @@
                   <li class= 'nav' id = 'countDown'>Count Down</li>
                   <li class= 'nav' id ='contactUs'>Contact Us</li>
                   <li class= 'nav' id ='game'>Hang Man</li>
+                  <li class= 'nav' id ='game'>Thank You</li>
                 </ul>
               </aside>
           </div>
-            <article>
+            <article class="articleThanks">
+                <h2 class="thanksH">Thank you!</h2>
+                <p class="thanksP">There's nothing complicated here. All we want to do is say THANKS to the whole Burning Man community and to everyone who makes it possible. Without it, we would be without so many awesome memories - experiences that have kept us in the moment and provided us with tools for our daily lives.</p>
+                <p class="thanksP"> We also want to thank everyone involved with the Whalephants camp! There are no adequate words to convey our feelings about this ol' camp and its annual devotees. Countless people have made it reality and continue making improvements every year. And if you are new to Whalephants, know it is the result of years worth of work!</p>
 
-
-
+                <p class="thanksP">If you would like to say thanks to Whalephants crew and your fellow campers, write your name and hit 'post'! The support is always motivating. Happy camping!</p>
 
 
 
