fix layout for new style, close #50

--- a/countDownPage/countDown.html
+++ b/countDownPage/countDown.html
@@ -38,8 +38,9 @@
                 <img id='bmimg' src='./countDownImage/BurningMan.png'>
             </div>
             <div id='rightCha'>
-                      <p id='drink'>Come Get A Drink</p>
-                  </div>
+                      <img id='robot' src='./countDownImage/robot.jpg'>
+                      <p id='drink'>Come Get A Drink!!!</p>
+            </div>
         </div>
 
                   <div id='bottom'>
