link thanksPage to all nav html

--- a/homePage/index.html
+++ b/homePage/index.html
@@ -25,6 +25,7 @@
                     <li class= 'nav' id = 'countDown'>Count Down</li>
                     <li class= 'nav' id ='contactUs'>Contact Us</li>
                     <li class= 'nav' id ='game'>Hang Man</li>
+                    <li class= 'nav' id ='thankYou'>Thank You</li>
                   </ul>
               </aside>
             </div>
