cap header, close #61

--- a/thanksPage/thanks.html
+++ b/thanksPage/thanks.html
@@ -29,7 +29,7 @@
               </aside>
           </div>
             <article class="articleThanks">
-                <h2 class="thanksH">Thank you!</h2>
+                <h2 class="thanksH">Thank You!</h2>
                 <p class="thanksP">There's nothing complicated here. All we want to do is say THANKS to the whole Burning Man community and to everyone who makes it possible. Without this beloved event, we would be without so many awesome memories - experiences that have kept us in the moment and provided us with tools for our daily lives.</p>
                 <p class="thanksP"> We also want to thank everyone involved with the Whalephants camp! There are no adequate words to convey our feelings about this ol' camp and its annual devotees. Countless people have made it reality and continue making improvements every year. And if you are new to Whalephants, know it is the result of years worth of work!</p>
 
