add video/fix vote layout

--- a/votePage/vote.html
+++ b/votePage/vote.html
@@ -14,7 +14,7 @@
       <h1>Whalephants</h1>
       </header>
 
-      <section id='voteSection' class ='width'>
+      <section class ='width'>
       <div id='bar'>
            <img src="../structure/homeImages/logo.jpg" id = 'logo' class='fade'>
            <aside>
@@ -30,23 +30,23 @@
             </aside>
         </div>
 
-            <div id = 'voteCopy'>
+            <article>
 
-               <br></br>
+                <div id = 'voteCopy'>
+                   <p>
+                    Whalepants will be serving up refreshing drinks during the 7 days of Burning Man. Have a favorite cocktail or have one that you have been dying to try?</p>
 
-               <p class="voteP">
-                Whalepants will be serving up refreshing drinks during the 7 days of Burning Man. Have a favorite cocktail or have one that you have been dying to try?
+                    <p>Below you can vote on two drinks and if one of your selections is in the top 7 it will be one of our featured drinks during the week
+                    </p>
 
-                <br></br>
+                </div>
+                <div id ='drinks'>
+                    <div id='sBox'>
+                    <input id='searchBox' type="search" placeholder="Find A Drink">
+                    </div>
+                    <div id ='images'>
 
-                Below you can vote on two drinks and if one of your selections is in the top 7 it will be one of our featured drinks during the week
-                </p>
-            </div>
-
-            <article id ='contentSection' >
-
-                <input id='searchBox' type="search" placeholder="Find A Drink">
-                <div id ='images'>
+                    </div>
 
                 </div>
 
