--- a/contactPage/contactUs.html
+++ b/contactPage/contactUs.html
@@ -30,8 +30,11 @@
             <!-- <div class="contactDiv"> -->
         <article>
             <div class="formArti">
-                    <p id="messageSent" class="responseP"></p>
+
+                <div id="newBorder">
+
                 <div id="divInner" class="divInner">
+                    <p id="messageSent" class="responseP"></p>
                     <p id="messageInstruct" class="messageInstruct">If you would like to reach us, please enter the information below. We will respond as soon as we can.<br></br><span>*</span>required</p>
                     <form>
                         <label><span>*</span>First Name</label><input id="fnameIn" class="contactInput" type="text" name="fname">
@@ -44,10 +47,11 @@
                     </form>
                     <button id="submitForm" class="submitButton">Submit</button>
                     <p id="validateP" class="validateP"></p>
-                </div>
 
-                    </div>
+                  </div>
+
                     <div class="ratings">
+                    <img id="ratingsimage" src="images/people.jpg">
                       <h2 class="rateTitle">How was camp?</h2>
                       <div id="rateDiv" class="rateHearts">
                         <img id="r1" class="hearts" src="images/campStars_blank.jpg">
@@ -83,6 +87,7 @@
                   <p>Corey Berning -This camp is awesome. They make great drinks. we stopped by everyday.</p>
                   <p>Corey Berning -This camp is awesome. They make great drinks. we stopped by everyday.</p>
                   </div>
+            </div>
             </div>
         </article>
 
