add comment js, close #72

--- a/contactPage/contactUs.html
+++ b/contactPage/contactUs.html
@@ -64,28 +64,17 @@
             </div>
 
             <div id='form'>
-                  <form id='userComment'>
-                      <label><span>*</span>Name</label><br/>
-                      <input id='name'><br/>
-                      <label><span>*</span>Comment</label><br/>
-                      <textarea id='userInput' wrap="hard"></textarea><br/>
-                      <button id='commentButton'>Comment</button>
-                  </form>
-
+                  <div id="formButt"
+                    <form id='userComment'>
+                        <label><span>*</span>Name</label><br/>
+                        <input id='name'><br/>
+                        <label><span>*</span>Comment</label><br/>
+                        <textarea id='userInput' wrap="hard"></textarea><br/>
+                    </form>
+                    <button id='commentButton'>Comment</button>
+                  </div>
                   <div id='commentsMade'>
                   <h3 id='CommentTitle'>Playa Comments</h3>
-                  <p>Corey Berning -This camp is awesome. They make great drinks. we stopped by everyday.</p>
-                  <p>Corey Berning -This camp is awesome. They make great drinks. we stopped by everyday.</p>
-                  <p>Corey Berning -This camp is awesome. They make great drinks. we stopped by everyday.</p>
-                  <p>Corey Berning -This camp is awesome. They make great drinks. we stopped by everyday.</p>
-                  <p>Corey Berning -This camp is awesome. They make great drinks. we stopped by everyday.</p>
-                  <p>Corey Berning -This camp is awesome. They make great drinks. we stopped by everyday.</p>
-                  <p>Corey Berning -This camp is awesome. They make great drinks. we stopped by everyday.</p>
-                  <p>Corey Berning -This camp is awesome. They make great drinks. we stopped by everyday.</p>
-                  <p>Corey Berning -This camp is awesome. They make great drinks. we stopped by everyday.</p>
-                  <p>Corey Berning -This camp is awesome. They make great drinks. we stopped by everyday.</p>
-                  <p>Corey Berning -This camp is awesome. They make great drinks. we stopped by everyday.</p>
-                  <p>Corey Berning -This camp is awesome. They make great drinks. we stopped by everyday.</p>
                   </div>
             </div>
             </div>
