fix JS comment appending bug, close #80

--- a/contactPage/contactUs.html
+++ b/contactPage/contactUs.html
@@ -64,11 +64,11 @@
             </div>
 
             <div id='form'>
-                  <div id="formButt"
+                  <div id="formButt">
                     <form id='userComment'>
-                        <label><span>*</span>Name</label><br/>
+                        <label class="commentLabel"><span>*</span>Name</label><br/>
                         <input id='name'><br/>
-                        <label><span>*</span>Comment</label><br/>
+                        <label class="commentLabel"><span>*</span>Comment</label><br/>
                         <textarea id='userInput' wrap="hard"></textarea><br/>
                     </form>
                     <button id='commentButton'>Comment</button>
