remove required on comments

--- a/contactPage/contactUs.html
+++ b/contactPage/contactUs.html
@@ -66,9 +66,9 @@
             <div id='form'>
                   <div id="formButt">
                     <form id='userComment'>
-                        <label class="commentLabel"><span>*</span>Name</label><br/>
+                        <label class="commentLabel">Name</label><br/>
                         <input id='name'><br/>
-                        <label class="commentLabel"><span>*</span>Comment</label><br/>
+                        <label class="commentLabel">Comment</label><br/>
                         <textarea id='userInput' wrap="hard"></textarea><br/>
                     </form>
                     <button id='commentButton'>Comment</button>
