--- a/votePage/vote.html
+++ b/votePage/vote.html
@@ -83,7 +83,9 @@
       </footer>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.js'></script>
+<script src="./JavaScript/randomColor.js"></script>
+<script src="./JavaScript/Chart.js"></script>
 <script src="../structure/homepage.js"></script>
-<script src="../structure/drinks.js" ></script>
+<script src="./JavaScript/drinks.js" ></script>
 </body>
 </html>
