add video and fix spacing

--- a/contactPage/contactUs.html
+++ b/contactPage/contactUs.html
@@ -65,16 +65,19 @@
 
             <div id='form'>
                   <div id="formButt">
-                    <form id='userComment'>
+                    <!-- <form id='userComment'> -->
                         <label class="commentLabel">Name</label><br/>
                         <input id='name'><br/>
                         <label class="commentLabel">Comment</label><br/>
                         <textarea id='userInput' wrap="hard"></textarea><br/>
-                    </form>
+                    <!-- </form> -->
                     <button id='commentButton'>Comment</button>
                   </div>
                   <div id='commentsMade'>
                   <h3 id='CommentTitle'>Playa Comments</h3>
+                  <div id ='userDone'>
+
+                  </div>
                   </div>
             </div>
             </div>
