--- a/votePage/vote.html
+++ b/votePage/vote.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>)'( Whalephants )'(</title>
+  <link rel="stylesheet" type="text/css" href="./jquery-ui.css">
   <link rel="stylesheet" type="text/css" href="../structure/homePage.css">
   <link href='https://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Gochi+Hand' rel='stylesheet' type='text/css'>
@@ -83,6 +84,7 @@
       </footer>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.js'></script>
+<script src="./JavaScript/jquery-ui.js"></script>
 <script src="./JavaScript/randomColor.js"></script>
 <script src="./JavaScript/Chart.js"></script>
 <script src="../structure/homepage.js"></script>
