change validation note, close 85

--- a/contactPage/contactUs.html
+++ b/contactPage/contactUs.html
@@ -35,7 +35,9 @@
 
                 <div id="divInner" class="divInner">
                     <p id="messageSent" class="responseP"></p>
-                    <p id="messageInstruct" class="messageInstruct">If you would like to reach us, please enter the information below. We will respond as soon as we can.<br></br><span>*</span>required</p>
+                    <p id="messageInstruct" class="messageInstruct">If you would like to reach us, please enter the information below. We will respond as soon as we can.</p>
+                    <p id="required" class="messageInstruct"><span>*</span>Required</p>
+                    <!-- <br></br><span>*</span>required</p> -->
                     <form>
                         <label><span>*</span>First Name</label><input id="fnameIn" class="contactInput" type="text" name="fname">
 
