--- a/aboutPage/about.html
+++ b/aboutPage/about.html
@@ -33,17 +33,20 @@
                 <h3 id ='title'><u>About Whalephants</u></h3>
 
                 <div id ='cornerTime'class ='InnerSec'>
-                    <p3>Whalephants is a camp that comes together from all around the united states. We strive to make sure that our camp mates and fellow burners are having fun and always have a full cup. Posted up at the corner of <b>9:15 and J</b> we relax with our morning drinks talking about the night before and inviting passerby's in for a drink.</p3><br/>
+                    <p3>Whalephants (Whale + Elephant) has been a Burning Man camp since 2010, focusing on crafting games and delicious cocktails that keep our fellow Burners happy. Posted at the corner of <b>9:15 and J</b>, you might find us in the morning reminiscing about the night before, relaxing, and inevitably inviting you in to join us for getting the new day moving. We like soaking in all Burning Man has to offer and encouraging others to do the same.</p3>
                     <img class ='sideImg' id='campTent' src="../homePage/homePageImages/campTent.jpg">
                 </div>
-
                 <div id='drinkTime' class ='InnerSec'>
-                    <p3>Every day a different camp mate is in charge of concocting a drink that will be later served on the corner. You as a reader can partake in this daily event in different ways. Pre-burn you can head over the the <a href="../votePage/vote.html"><u>Voting page</u></a> to help decide what drinks are going to be made for this years burn. The second way that you can help make this great social event happen is to come by each day to the corner of <b>9:15 and J</b> to help consume the great drinks that each mate has created.</p3><br/>
+                    <p3>Every day a different camp mate is in charge of concocting a drink that will be later served on the corner. You as a reader can partake in this daily event in different ways. Pre-burn you can head over to the <a href="../votePage/vote.html"><u>Voting page</u></a> to help decide what drinks are going to be made for this year’s event. The second way you can help make this great is to come by each day to the corner of <b>9:15 and J</b> to enjoy the efforts of your voting!</p3><br/> 
                     <img class ='sideImg' id='drink' src="./aboutImages/drink.jpg">
                 </div>
 
                 <div id ='moopTime' class ='InnerSec'>
-                    <p3>As a group we have a few different game that we play. The first one is a picture contest that you can be involved in. some of the camp mates have build different ray guns out of old tools. The goal for the picture is to have the craziest, coolest picture possible. The second game that we play as a camp is the <a target="_blank" href='http://burningman.org/event/preparation/leaving-no-trace/'><u>Moop</u></a> game. For you new burners out there Moop is Matter Out of Place. As we all should know the goal is to leave on trace. So as a group we play this great game, the goal is to pick up any moop that you can fine. Whether it is near the camp or around the playa its all fair game. If you pick up something you are allowed to put it in the nearest persons backpack or bike basket. Each morning we all go over what was found and who was the findy. There are a few different categories that you can win in the game of Moop, some being: Biggest piece of moop, shiniest piece of moop, smallest piece of moop, craziest piece of moop, and the list goes on.<br/>
+                    <p3>We also have a couple core games Whalephant Burners like to play, and we know you will enjoy them too. Think you have photo skills? Take to our annual photo contest. We supply the props (. . .we recommend the homemade ray guns), you supply the action. The crazy-coolest pictures get the victory - and more drinks.
+                    <br></br>
+                    The second game doubles as the Burning Man conservation effort. With so many people, there is always bound to be stray matter. Matter Out Of Place (AKA Moop) is a big deal, and being responsible Burners means taking care of the Moop. That is why we have our own <a target="_blank" href='http://burningman.org/event/preparation/leaving-no-trace/'><u>Moop</u></a>scavenger hunt! 
+                    <br></br>
+                    The goal is simple: Find the Moop and collect it; ever piece is fair game. Every morning we go over what was discovered and who discovered it. You can also go for the category wins, some of which include: Biggest Piece of Moop, Shiniest Piece of Moop, Smallest Piece of Moop, and the Craziest Piece of Moop.<br/>
                     <img src="./aboutImages/moop.jpg" id='moopImg'>
                 </p3>
                 </div>
