edit home copy, close #59

--- a/homePage/index.html
+++ b/homePage/index.html
@@ -33,10 +33,7 @@
             <article>
                 <div id='desc'>
                       <h2 id = 'arTitle'>Welcome To Camp</h2>
-                      <p id='about'>Whalephents is a burning man camp that has been
-                      contributing for many years. Living at 9:15 and J we stive to
-                      make sure that people around us are having a great time and drinking
-                      Amazing drinks.</p>
+                      <p id='about'>Whalephants has been a Burning Man camp since 2010, focusing on crafting games and delicious cocktails that keep our fellow Burners happy. Posted at the corner of 9:15 and J (our Burning Man address), you might find us in the morning reminiscing about the night before, relaxing, and inevitably inviting you in to join us for getting the new day moving. We like soaking in all Burning Man has to offer and encouraging others to do the same.</p>
                 </div>
 
                 <div class="swiper-container">
